# neural_rps

./: .clang-tidy  .gitignore  AGENT_INVENTORY_AND_INTEGRATION_PLAN.md  ARCHITECTURE.md  BUILD_SYSTEM_UPDATES.md  CMakeLists.txt  DEFERRED_TASKS.md  GO_MCTS_OPTIMIZATION_PLAN.md  GPU_ACCELERATION_IMPLEMENTATION.md  GPU_ACCELERATION_PLAN.md  GPU_ACCELERATION_STATUS.md  IMPROVEMENT_PLAN.md  INTEGRATION_PLAN_ASSESSMENT.md  MCTS_GPU_ACCELERATION_PLAN.md  MCTS_GPU_ACCELERATION_TUTORIAL.md  MCTS_MIGRATION_TO_GPU.md  MINIMAX_CACHING_PLAN.md  MINIMAX_CONTROL_AGENT_PLAN.md  MODULE_REORGANIZATION_PLAN.md  Makefile  ONNX_BENCHMARK_CPU_TF_GPU_TUTORIAL.md  PARALLELIZATION_AND_TOURNAMENT_INTEGRATION.md  PROJECT_ENTRY_POINTS.md  PYTHON_ONNX_SERVICE_PLAN.md  README.md  README_UPDATE.md  REALISTIC_BENCHMARK_TUTORIAL.md  REFACTORING_PLAN.md  REVISED_PLAN_MAY12.md  RULES.md  SUPERVISED_LEARNING_PLAN.md  SUPERVISED_LEARNING_TUTORIAL_FOR_MIDLEVEL_SWE.md  TENSORFLOW_IMPLEMENTATION.md  TODO.md  advanced_game_comparison.txt  alphago_demo_output.txt  build_all.sh  cpp_demo_output.txt  cpp_fixed_pattern_results.txt  cpp_implementation_output_example.txt  (+30 more)
alphago_demo/: GRACEFUL_EXIT_IMPLEMENTATION.md  HALL_OF_FAME_PLAN.md  IMPLEMENTATION.md  MINIMAX_ANALYZER_IMPLEMENTATION_PLAN.md  MINIMAX_ANALYZER_PLAN.md  MINIMAX_IMPLEMENTATION_TUTORIAL.md  Makefile  NEAT_DEFAULTS_AND_CONFIG.md  NEAT_IMPLEMENTATION_SUMMARY.md  NEAT_INTEGRATION_PLAN.md  NEAT_PARALLEL_EVAL_TUTORIAL.md  NEAT_TRAINING_TUTORIAL_FOR_MIDLEVEL_SWE.md  NEAT_TUTORIAL.md  NEURAL_RPS_PROJECT_SUMMARY.md  PARALLEL_SELF_PLAY_EVALUATOR.md  README.md  README_PERFORMANCE.md  RPS_README.md  build.sh  rps_card  rps_model_comparison_report.md  run.sh  run_rps.sh  run_tests.sh  tictactoe  train_models
alphago_demo/cmd/analyze_model/: main.go
alphago_demo/cmd/balanced_rps_card/: main.go
alphago_demo/cmd/compare_models/: main.go
alphago_demo/cmd/debug_ai_game/: main.go
alphago_demo/cmd/elo_tournament/: main.go
alphago_demo/cmd/evaluate_model/: main.go
alphago_demo/cmd/generate_examples/: main.go
alphago_demo/cmd/generate_training_data/: main.go
alphago_demo/cmd/minimax_vs_new_neural/: main.go
alphago_demo/cmd/play_vs_ai/: main.go
alphago_demo/output/: neat_gen01_policy.model  neat_gen01_value.model  neat_gen02_policy.model  neat_gen02_value.model  neat_gen03_policy.model  neat_gen03_value.model  neat_gen04_policy.model  neat_gen04_value.model  neat_gen05_policy.model  neat_gen05_value.model  neat_gen06_policy.model  neat_gen06_value.model  neat_gen07_policy.model  neat_gen07_value.model  neat_gen08_policy.model  neat_gen08_value.model  neat_gen09_policy.model  neat_gen09_value.model  neat_gen10_policy.model  neat_gen10_value.model  neat_gen11_policy.model  neat_gen11_value.model  neat_gen12_policy.model  neat_gen12_value.model  neat_gen13_policy.model  neat_gen13_value.model  neat_gen14_policy.model  neat_gen14_value.model  neat_gen15_policy.model  neat_gen15_value.model  neat_gen16_policy.model  neat_gen16_value.model  neat_gen17_policy.model  neat_gen17_value.model  neat_gen18_policy.model  neat_gen18_value.model  neat_gen19_policy.model  neat_gen19_value.model  neat_gen20_policy.model  neat_gen20_value.model  (+155 more)
alphago_demo/results/: tournament_Model1_vs_Model2_20250325_185929.txt
alphago_demo/scripts/: analyze_rps_games.py  quick_rps_demo.py
cmd/benchmark/: gpu.go  main.go
cmd/neural_rps/: main.go
cmd/profile_gpu/: main.go
cmd/tools/: benchmark_gpu_mcts.go
cmd/training/: gpu_training.go
cpp_implementation/: CMakeLists.txt  Environment.hpp  Makefile  NetworkVisualizer.hpp  NeuralNetwork.hpp  PPOAgent.hpp  README.md  cpp_demo_output.txt  main.cpp  rps_agent.cpp  simple_demo.cpp
cpu_benchmark/: main.go
docs/: GPU_MCTS_README.md  MODELS_README.md  NEURAL_NETWORKS_FROM_SCRATCH_TUTORIAL.md  build_system.md  integration_guide.md  interfaces.md
docs/archive/: COMMIT_PLAN.md  GPU_ACCELERATION_TUTORIAL.md  build_system.md  implementation_instructions.md
golang_implementation/: Makefile  README.md  go.sum  go_demo_output.txt
golang_implementation/results/: tournament_AlphaGo_Small_vs_Large_20250325_182835.txt  tournament_AlphaGo_vs_PPO_20250325_182407.txt
include/: Card.hpp  NetworkVisualizer.hpp  PPOAgent.hpp
legacy_cpp_implementation/: CMakeLists.txt  README.md  TODO.md
legacy_cpp_implementation/include/: Environment.hpp  NeuralNetwork.hpp  PPOAgent.hpp
legacy_cpp_implementation/src/: CMakeLists.txt  NeuralNetwork.cpp  main.cpp
legacy_cpp_implementation/tests/: CMakeLists.txt  test_environment.cpp
output/: alphago_implementation_output_example.txt  cpp_biased_paper_results.txt  cpp_biased_rock_results.txt  cpp_biased_scissors_results.txt  cpp_demo_output.txt  cpp_game_results.txt  go_biased_paper_results.txt  go_biased_rock_results.txt  go_demo_output.txt  go_fixed_pattern_results.txt  go_implementation_output_example.txt  go_mimicking_results.txt  legacy_cpp_biased_paper_results.txt  legacy_cpp_fixed_pattern_results.txt  legacy_cpp_game_results.txt  rps_h128_g20_e6_20250512-115952_policy.model  rps_h128_g20_e6_20250512-115952_value.model  rps_h64_g10_e3_20250512-115952_policy.model  rps_h64_g10_e3_20250512-115952_value.model  strategy_fixed_pattern.txt  tournament_results.csv
pkg/agent/: ppo.go  ppo_test.go
pkg/common/: interfaces.go
pkg/game/: environment_test.go  rps_card_game.go
pkg/neural/: backprop_test.go  layer.go  layer_test.go  network.go  network_test.go  tf_policy.go  visualizer.go  visualizer_test.go
pkg/visualizer/: visualizer.go
proto/: neural_service.pb.go  neural_service_grpc.pb.go
python/: neural_service.py
scripts/: README.md  agent_adapters.go  build.sh  build_all.sh  commit.sh  convert_go_json_to_onnx.py  game_server.go  generate_proto.sh  run_advanced_game_test.sh  run_demos.sh  run_gpu_mcts_benchmark.sh  run_gpu_training.sh  run_standardized_demos.sh  run_standardized_game.sh  run_tournament.go  setup_macos_gpu.sh  train_alphago_models.go
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_card.cpp  test_neural_network.cpp  test_ppo_agent.cpp
(+183 files in other folders)
